# dunebox

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/app/pwhs/dunebox/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/app/pwhs/dunebox/: DuneBoxApplication.kt  MainActivity.kt
app/src/main/java/app/pwhs/dunebox/ui/navigation/: DuneBoxNavHost.kt
app/src/main/java/app/pwhs/dunebox/ui/screen/: AppPickerScreen.kt  HomeScreen.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/app/pwhs/dunebox/: ExampleUnitTest.kt
dunebox-native/: build.gradle.kts  consumer-rules.pro
dunebox-native/src/main/cpp/: CMakeLists.txt  io_redirect.cpp  jni_bridge.cpp  path_resolver.cpp  path_resolver.h
dunebox-native/src/main/java/app/pwhs/dunebox/native_engine/: NativeEngine.kt
dunebox-sdk/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
dunebox-sdk/src/androidTest/java/app/pwhs/dunebox/sdk/: MtkDiagnosticTest.kt  MtkResOptShimTest.kt
dunebox-sdk/src/main/: AndroidManifest.xml
dunebox-sdk/src/main/java/app/pwhs/dunebox/sdk/: DuneBox.kt  DuneBoxDsl.kt
dunebox-stub/: build.gradle.kts  consumer-rules.pro
dunebox-stub/src/main/: AndroidManifest.xml
dunebox-stub/src/main/java/app/pwhs/dunebox/stub/: StubActivity.kt  StubContentProvider.kt  StubService.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sample-app/: build.gradle.kts
sample-app/src/main/: AndroidManifest.xml
sample-app/src/main/java/app/pwhs/dunebox/sample/: MainActivity.kt
(+27 files in other folders)
